--- a/Client/public/index.html
+++ b/Client/public/index.html
@@ -15,7 +15,7 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link rel="icon" type="image/x-icon" href="../src/images/todo2.png" />
+    <link rel="icon" type="image/x-icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTlSazI3mLQr5jMVBuarpUp1THwADvRhs8QZG0SmSmeJaelZu0DWkmJB7PWBnEnEB1jlac&usqp=CAU" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
