Adding last fitting icon

--- a/Client/public/index.html
+++ b/Client/public/index.html
@@ -15,7 +15,7 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link rel="icon" type="image/x-icon" href="https://www.svgrepo.com/show/408381/stack-apps-layers.svg" />
+    <link rel="icon" type="image/x-icon" href="https://d29fhpw069ctt2.cloudfront.net/icon/image/84572/preview.svg" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
